--- a/app/src/main/res/layout/adapter_listview_layout.xml
+++ b/app/src/main/res/layout/adapter_listview_layout.xml
@@ -3,14 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="5dp">
+    android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/adapter_listview_avatar_imageview"
         android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:layout_height="match_parent"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <LinearLayout
