ストリーミング、追加読み込みに対応させた

--- a/app/src/main/res/menu/activity_menu.xml
+++ b/app/src/main/res/menu/activity_menu.xml
@@ -8,9 +8,8 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/mainactivity_menu_streaming"
-        android:icon="@drawable/ic_flash_on"
+        android:icon="@drawable/ic_flash_off"
         android:title="ストリーミング"
-        android:visible="false"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/mainactivity_menu_refresh"
