ガラケー時代のブラウザの様にテンキーにお気に入りや投稿ダイアログ表示などを割り当てた。GJ

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,9 +39,17 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/mainactivity_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
     </androidx.viewpager.widget.ViewPager>
+
+    <TextView
+        android:id="@+id/timeline_listview_key_controll_guide"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="テンキー操作のガイドだよ" />
+
 
 
     <!--    <ListView
