--- a/app/src/main/res/layout/fragment_timeline_layout.xml
+++ b/app/src/main/res/layout/fragment_timeline_layout.xml
@@ -6,9 +6,10 @@
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
         android:id="@+id/fragment_swipe"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
         <ListView
             android:id="@+id/fragment_listview"
@@ -16,6 +17,5 @@
             android:layout_height="match_parent" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 
 </LinearLayout>
